# imprimis

./: .gitignore  .gitmodules  README.md  gps goal map.html
.devcontainer/: Dockerfile  devcontainer.json
.images/: source-the-setup-bash-v2.md
Arduino RGB code/: RGB_code (old).ino
EspFirmware/: imprimis_tune_PID.py  serialTest.py
EspFirmware/boardA/: platformio.ini
EspFirmware/boardA/src/: boardA.cpp
EspFirmware/boardB/src/: MotorController.cpp  boardB.cpp
EspFirmware/common/: comms.cpp  config.h
EspFirmware/gps/: better_gps.ino  gps.ino
OpenMV/: Byte_io_subscriber  Lane Detection  RPC Controller Device  Seril Port Read
OpenMV/Kevin's OpenMV/: Camera_Feed.py  Donkey_MV.py  Image_copy.py  Kokera.py  Kokera_Port_Reader.py  Lane_Detection.py  Linear_regression_fast.py  Old_main.py  Read_Serial_Port.py  Test Main File.py  Test.py  find_circles.py  servo.py  uImage
firmware/MotionController/: MotorController.cpp  serialTest.py
firmware/RadioReceiver/: RadioReceiver.ino
imprimis_ws/: .bash_aliases  fix_gazebo.bash  fix_sdf.py  frames_2025-11-06_12.43.52.gv  frames_2026-02-20_16.33.33.gv
imprimis_ws/controller_config/: imprimis_controller_config.yaml
imprimis_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
imprimis_ws/log/: latest_build
imprimis_ws/rosbag2_2026_03_18-13_06_59/: metadata.yaml  rosbag2_2026_03_18-13_06_59_0.mcap
imprimis_ws/rosbag2_2026_03_18-13_06_59/rosbag2_2026_03_18-13_12_09/: metadata.yaml  rosbag2_2026_03_18-13_12_09_0.mcap
imprimis_ws/src/: pose_graph.g2o
imprimis_ws/src/imprimis_hardware_interface/: CMakeLists.txt  diff_drive_system_plugins.xml  package.xml
imprimis_ws/src/imprimis_hardware_interface/config/: diff_drive_controller.yaml  diff_drive_hw.yaml
imprimis_ws/src/imprimis_hardware_interface/include/: diff_drive_system.hpp
imprimis_ws/src/imprimis_hardware_interface/src/: diff_drive_system.cpp
imprimis_ws/src/imprimis_hardware_platform/: CMakeLists.txt  README.md  imprimis_hardware_platform.xml  package.xml
imprimis_ws/src/imprimis_hardware_platform/bringup/config/: diffbot_controllers.yaml
imprimis_ws/src/imprimis_hardware_platform/bringup/launch/: diffbot.launch.py
imprimis_ws/src/imprimis_hardware_platform/config/: VLP16-driver-params.yaml  VLP16-transform-params.yaml  diffbot_controllers.yaml  diffbot_controllers_no_odom_tf.yaml  disable_odom_tf.yaml  gz_bridge.yaml  gz_bridge_no_gps.yaml  nmea_navsat_driver.yaml  sim_diffbot_controllers.yaml  um7_IMU.yaml
imprimis_ws/src/imprimis_hardware_platform/description/launch/: view_robot.launch.py
imprimis_ws/src/imprimis_hardware_platform/description/ros2_control/: diffbot.ros2_control.xacro
imprimis_ws/src/imprimis_hardware_platform/description/urdf/: diffbot.urdf.xacro
imprimis_ws/src/imprimis_hardware_platform/doc/: userdoc.rst
imprimis_ws/src/imprimis_hardware_platform/hardware/: diffbot_system.cpp  serial_comms.cpp
imprimis_ws/src/imprimis_hardware_platform/hardware/include/imprimis_hardware_platform/: diffbot_system.hpp  serial_comms.hpp
imprimis_ws/src/imprimis_hardware_platform/launch/: diffbot.launch.py  imprimis_hardware.launch.py
imprimis_ws/src/imprimis_hardware_platform/meshes/igvc/: Road_Barrier_01.dae  agriculture_world.dae  construction_barrel.dae  custom_asphalt.glb
imprimis_ws/src/imprimis_hardware_platform/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
imprimis_ws/src/imprimis_hardware_platform/worlds/: construction.sdf  empty.world  igvc.sdf  orchard.sdf  solar_farm.sdf  warehouse.sdf
imprimis_ws/src/imprimis_navigation/: CMakeLists.txt  README.md  package.xml  speed_critic_plugin.xml
imprimis_ws/src/imprimis_navigation/config/: Global_EKF.yaml  Local_EKF.yaml  SLAM.yaml  bno055_params.yaml  global_ekf_config.yaml  gps_nav_bridge.yaml  local_ekf_config.yaml  localization_nodes_config.yaml  map_goal_to_odom.yaml  navsat_transform.yaml  navsat_transform_params.yaml  sim_gps_from_odom.yaml  twist_to_stamped.yaml  waypoints.yaml
imprimis_ws/src/imprimis_navigation/config/gps_nav_bridge/: gps_nav_bridge_gpio_auto.yaml  gps_nav_bridge_gpio_fixed.yaml  gps_nav_bridge_sim.yaml
imprimis_ws/src/imprimis_navigation/config/nav2/: SmacHybrid_DWB_1.yaml  SmacHybrid_DWB_2.yaml  SmacHybrid_HybridRPPMPPI_1.yaml  SmacHybrid_HybridRPPMPPI_2.yaml  SmacHybrid_MPPI_3.yaml  SmacHybrid_MPPI_4.yaml  SmacHybrid_RPP_1.yaml  SmacHybrid_RPP_2.yaml  Test.yaml
imprimis_ws/src/imprimis_navigation/config/nav2_blank_map/: bigger_black.yaml  bigger_blank.pgm  bigger_blank.yaml  blank.pgm  blank.yaml  cmd_vel_twist_to_stamped.py  ekf_global.yaml  nav2_blank_params.yaml  nav2_blank_paramsRestartTuned.yaml  nav2_blank_paramstuned.yaml
imprimis_ws/src/imprimis_navigation/include/imprimis_navigation/: speed_critic.hpp
imprimis_ws/src/imprimis_navigation/launch/: basic_nav.launch.py  jack_basic_nav.launch.py  jack_localization.launch.py  localization.launch.py  nav2_minimal_bringup.launch.py
imprimis_ws/src/imprimis_navigation/nav2_bt/: imprimis_nav2pos_bt.xml
imprimis_ws/src/imprimis_navigation/scripts/: controller_switcher.py  velocity_tracker.py  waypoint_sender.py
imprimis_ws/src/imprimis_navigation/src/: speed_critic.cpp
imprimis_ws/src/lanes_costmap_plugin/: CMakeLists.txt  lane_layer.xml  package.xml
imprimis_ws/src/lanes_costmap_plugin/include/lanes_costmap_plugin/: lane_layer.hpp
imprimis_ws/src/lanes_costmap_plugin/src/: lane_layer.cpp
imprimis_ws/src/t265_ros_driver/: CMakeLists.txt  package.xml
imprimis_ws/src/t265_ros_driver/src/: main.cpp
motor_firmware/MotionController/: MotionController.ino  MotorController.cpp  config.h  serialTest.py
motor_firmware/RadioReceiver/: RadioReceiver.ino
motor_firmware/encoder/: MotorController.cpp  MotorControllerNode.py  config.h  encoder.ino  serialTest.py
motorcontrol/: encoder.py
motorcontrol/PID_pkg/: package.xml  setup.cfg  setup.py
sp/: config.h
sp/src/: MotorController.cpp  boardA.cpp  boardAtest.cpp  boardB.cpp  boardBtest.cpp  main.cpp  platformio.ini  test.cpp
vision/: transformation.py
(+198 files in other folders)
