<?xml version="1.0"?>
<package format="3">
  <name>diff_drive_hw</name>
  <version>0.0.0</version>
  <description>ros2 control hardware interface for Imprimis</description>

  <maintainer email="nerallarn@vcu.edu">Ray</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>

  <export>
    <hardware_interface plugin="${prefix}/share/diff_drive_hw/diff_drive_system_plugins.xml"/>
  </export>
</package>
