<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imprimis_navigation</name>
  <version>0.0.0</version>
  <description>Configuration and launch files for robot_localization, SLAM, and nav2 on imprimis.</description>
  <maintainer email="rayneralla@icloud.com">ray</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>nav2_bringup</depend>

  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_behavior_server</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_lifecycle_manager</depend>
  
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_theta_star_planner</depend>
  <depend>nav2_dwb_controller</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  
  <depend>nav2_behavior_tree</depend>
  <depend>behaviortree_cpp_v3</depend>
  
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_common</depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <depend>pluginlib</depend>
  <depend>class_loader</depend>
  <depend>yaml_cpp_vendor</depend>
  
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>launch_testing</depend>
  
  <depend>angles</depend>
  <depend>bond</depend>
  <depend>bondcpp</depend>
  <depend>nav_2d_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
