<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanes_costmap_plugin</name>
  <version>1.0.0</version>
  <description>Custom costmap layer for lane detection.</description>
  <maintainer email="rayneralla@icloud.com">Ray Neralla</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>realsense2_description</depend>
  <depend>libopencv-dev</depend>
  <depend>sensor_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/lane_layer.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
